@@ -3,8 +3,8 @@
 # Horms                                             horms@vergenet.net
 #
 # perdition
-# Mail retreival proxy server
-# Copyright (C) 1999  Horms
+# Mail retreival proxy server, MySQL support
+# Copyright (C) 1999 Horms and Frederic Delchambre
 # 
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
