@@ -11,7 +11,7 @@
  *                                                   http://www.nts.be/
  * perdition
  * Mail retreival proxy server, MySQL support
- * Copyright (C) 1999  Horms, Frederic Delchambre
+ * Copyright (C) 1999  Horms and Frederic Delchambre
  * 
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
